--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
